--- a/tauri/sound-app/src/App.css
+++ b/tauri/sound-app/src/App.css
@@ -1,120 +1,3 @@
-.logo.vite:hover {
-  filter: drop-shadow(0 0 2em #747bff);
-}
-
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafb);
-}
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color: #0f0f0f;
-  background-color: #f6f6f6;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-.container {
-  margin: 0;
-  padding-top: 10vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: 0.75s;
-}
-
-.logo.tauri:hover {
-  filter: drop-shadow(0 0 2em #24c8db);
-}
-
-.row {
-  display: flex;
-  justify-content: center;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
-}
-
-h1 {
-  text-align: center;
-}
-
-input,
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  color: #0f0f0f;
-  background-color: #ffffff;
-  transition: border-color 0.25s;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-}
-
-button {
-  cursor: pointer;
-}
-
-button:hover {
-  border-color: #396cd8;
-}
-button:active {
-  border-color: #396cd8;
-  background-color: #e8e8e8;
-}
-
-input,
-button {
-  outline: none;
-}
-
-#greet-input {
-  margin-right: 5px;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    color: #f6f6f6;
-    background-color: #2f2f2f;
-  }
-
-  a:hover {
-    color: #24c8db;
-  }
-
-  input,
-  button {
-    color: #ffffff;
-    background-color: #0f0f0f98;
-  }
-  button:active {
-    background-color: #0f0f0f69;
-  }
-}
-
 :root {
   --inner-radius: 7rem;
   --outer-radius: 30rem;
@@ -124,6 +7,8 @@ button {
   position: relative;
   width: var(--outer-radius);
   height: var(--outer-radius);
+  overflow: hidden;
+  border-radius: 50%;
 }
 
 .menu-wrapper {
@@ -140,15 +25,27 @@ button {
 
 .menu {
   position: absolute;
-  background-color: greenyellow;
-  opacity: 0.3;
+  /* background-color: greenyellow; */
   width: 50%;
   height: 50%;
-  outline: dotted 1px blue;
+  outline: dotted 1px #53722dcc;
+  /* outline: dotted 1px blue; */
   transform-origin: 100% 100%;
   overflow: hidden;
   text-align: center;
   vertical-align: middle;
+
+  &:after {
+    position: absolute;
+    top: 70%;
+    left: 70%;
+    width: 60%;
+    height: 60%;
+    border-radius: 50%;
+    transform: skewY(-45deg);
+    content: "";
+    outline: dotted 1px red;
+  }
 
   span {
     display: block;
@@ -156,16 +53,33 @@ button {
     height: 200%;
     border-radius: 50%;
     transform: skewY(-45deg) rotate(-22.5deg);
-    background: #c9c9c9;
-    text-orientation: upright;
+    background: #00000055;
     display: grid;
     place-items: start center;
-    color: #7a8092;
-  }
-}
 
-.menu:hover {
-  opacity: 1;
+    background: radial-gradient(
+      rgba(127, 127, 127, 0) 16%,
+      #53722dcc 18%,
+      #00000055 20%
+    );
+    /* background-size: 15% 15%, 15% 15%, cover; */
+
+    &:hover {
+      background: radial-gradient(
+        rgba(127, 127, 127, 0) 16%,
+        #53722dcc 18%,
+        #53722d99 20%
+      );
+    }
+
+    a {
+      color: white;
+      writing-mode: vertical-rl;
+      text-orientation: sideways;
+      height: 30%;
+      user-select: none;
+    }
+  }
 }
 
 .cancel {
@@ -200,115 +114,35 @@ button {
 }
 .menu:nth-child(3) {
   transform: rotate(22.5deg) skewY(45deg);
-  span {
-    a {
-      writing-mode: vertical-rl;
-      height: 50%;
-    }
+  span a {
+    text-orientation: upright;
   }
 }
 .menu:nth-child(4) {
   transform: rotate(67.5deg) skewY(45deg);
+  span a {
+    transform: rotate(180deg);
+  }
 }
 .menu:nth-child(5) {
   transform: rotate(112.5deg) skewY(45deg);
+  span a {
+    transform: rotate(180deg);
+  }
 }
 .menu:nth-child(6) {
   transform: rotate(157.5deg) skewY(45deg);
+  span a {
+    transform: rotate(180deg);
+  }
 }
 .menu:nth-child(7) {
   transform: rotate(202.5deg) skewY(45deg);
+  span a {
+    text-orientation: upright;
+    transform: rotate(180deg);
+  }
 }
 .menu:nth-child(8) {
   transform: rotate(247.5deg) skewY(45deg);
-}
-
-/*  */
-
-.ui-wrapper {
-  position: relative;
-  * {
-    margin: 0;
-    padding: 0;
-  }
-}
-
-.ctrl {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  font: 1.5em/1.13 Verdana, sans-serif;
-  transition: 0.5s;
-}
-
-.ui-wrapper span {
-  display: block;
-  opacity: 0.56;
-  background: #c9c9c9;
-  color: #7a8092;
-  text-align: center;
-  text-shadow: 0 -1px dimgrey;
-}
-
-.ui-wrapper span:hover,
-.ui-wrapper span:focus {
-  opacity: 1;
-}
-
-.button {
-  z-index: 2;
-  margin: -0.625em;
-  width: 1.25em;
-  height: 1.25em;
-  border-radius: 50%;
-  box-shadow: 0 0 3px 1px white;
-}
-/* circular menu */
-.tip {
-  z-index: 1;
-  outline: dotted 1px red;
-  margin: -5em;
-  width: 10em;
-  height: 10em;
-  list-style: none;
-  transform: scale(1);
-  opacity: 1;
-}
-
-.slice {
-  overflow: hidden;
-  position: absolute;
-  outline: dotted 1px blue;
-  width: 50%;
-  height: 50%;
-  transform-origin: 100% 100%;
-  background-color: greenyellow;
-}
-
-.slice:first-child {
-  transform: rotate(-45deg) skewY(60deg);
-}
-.slice:nth-child(2) {
-  transform: rotate(-15deg) skewY(60deg);
-}
-.slice:nth-child(3) {
-  transform: rotate(15deg) skewY(60deg);
-}
-.slice:nth-child(4) {
-  transform: rotate(45deg) skewY(60deg);
-}
-.slice:last-child {
-  transform: rotate(75deg) skewY(60deg);
-}
-
-/* menu links */
-.slice span {
-  width: 200%;
-  height: 200%;
-  border-radius: 50%;
-  box-shadow: 0 0 3px dimgrey, inset 0 0 4px white;
-  /* "unskew" & rotate by -A°/2 */
-  transform: skewY(-60deg) rotate(-15deg);
-
-  line-height: 1.4;
 }
